--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bad-words": "^3.0.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.3.1",
@@ -18,6 +19,7 @@
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "googleapis": "^67.1.1",
+    "http": "0.0.1-security",
     "http-errors": "^1.6.3",
     "moment": "^2.29.1",
     "mongoose": "^5.11.19",
@@ -28,6 +30,7 @@
     "passport-local": "^1.0.0",
     "query-string": "^6.14.1",
     "request": "^2.88.2",
+    "socket.io": "^4.0.0",
     "unirest": "^0.6.0",
     "url-parse": "^1.5.1"
   }
